Fix slider by adding the listeners to the new innerHTML that we render. Also add overflow scroll, in case the content of the modal windows are too big.

--- a/app/assets/stylesheets/pupup.scss
+++ b/app/assets/stylesheets/pupup.scss
@@ -3,7 +3,7 @@ div#photoInfo {
 	position: absolute;
 	border: 2px double grey;
     background: wheat;
-    overflow: hidden;
+    overflow: scroll;
     height: 400px;
     z-index: 999;
 }
