--- a/app/assets/stylesheets/slider.scss
+++ b/app/assets/stylesheets/slider.scss
@@ -3,7 +3,7 @@ div#sliderWindow {
 	position: absolute;
 	border: 2px double grey;
     background: wheat;
-    overflow: hidden;
+    overflow: scroll;
     height: 400px;
     
     ul#slides {
